[project]
name = "vaultrag"
version = "1.0.0"
description = "VaultRAG — 三路检索融合 + Claude Code 长久记忆: 向量+BM25+图谱 RRF → Reranker, 记忆快照跨会话延续"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "sentence-transformers",
    "jieba",
    "rank-bm25",
]

[project.optional-dependencies]
pdf = ["pdfplumber", "PyMuPDF"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools"
